# rwu_particles_informatikprojekt

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MingWWindowsBuild.cmake  README.md  cpuMain.c  def.h  initOpenGL.c  initOpenGL.h  initVulkan.c  initVulkan.h  main.c  openglMain.c  particlesystem.c  particlesystem.h  utils.c  utils.h  vulkanMain.c
glad/include/glad/: glad.h
glad/src/: glad.c
glfw/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake
glfw-3.3/docs/: input.dox
glfw-3.3/docs/html/: group__input.html  input_guide.html
glfw-3.3/examples/: particles.c
glfw-3.3/include/GLFW/: glfw3.h
glfw/docs/html/: jquery.js
glfw/include/GLFW/: glfw3.h
glfw/src/: Makefile  cmake_install.cmake
newVulkan/: initVulkan.c  initVulkan.h  vulkanMain.c
shaders/: ComputeShader.glsl  FragmentShader.glsl  GeometryShader.glsl  RenderShader.glsl  UpdateShader.glsl  VertexShader.glsl
shaders/opengl/: ComputeShader.glsl  FragmentShader.glsl  VertexShader.glsl
shaders/vulkan/: ComputeShader.comp  FragmentShader.frag  VertexShader.vert  runCompiler.bat  runCompiler.sh
